# random-launcher

./: .gitignore  Cargo.toml  README.md  next.config.js  package.json  tsconfig.json
src/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: article.rs
src-tauri/src/domain/: models.rs
src/domain/: models.ts
src/pages/: _app.tsx  index.tsx  post.tsx
src/pages/articles/: [id].tsx
src/pages/games/: [id].tsx
src/repository/fly/: fly.ts
