[package]
name = "random-launcher"
version = "0.0.1"
description = "The game launcher used for the ch-random exhibit"
authors = ["moyomogi <mozuyomogi@gmail.com>"]
license = "CC0-1.0"
repository = "https://github.com/ch-random/random-launcher"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
anyhow = "1.0"
# https://github.com/ATiltedTree/ytextract/issues/25
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3", features = ["compat"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tauri = { version = "1.0", features = ["api-all"] }
tokio = { version = "1.0", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
